package ejercicio2;

//Interfaz Traducción con métodos abstractos
public interface Traduccion {
    void introducirLugar();
    void introducirHorario();
    void inicioRespuesta();
    void finRespuesta();
}
